--- a/pipelines/templates/jobs/job-deploy-infra.yml
+++ b/pipelines/templates/jobs/job-deploy-infra.yml
@@ -7,6 +7,8 @@ parameters:
     type: string
   - name: infraPath
     type: string
+  - name: parametersPath
+    type: string
   - name: rgName
     type: string
   - name: location
@@ -14,21 +16,11 @@ parameters:
   - name: overrideParameters
     type: string
 
+
 jobs:
   - job: "${{ parameters.job }}"
     displayName: "Job: Provision Infrstructure - ${{ parameters.jobResources }}"
     steps:
-      - task: AzurePowerShell@5
-        inputs:
-          azureSubscription: "${{ parameters.serviceConnection }}"
-          ScriptType: "FilePath"
-          ScriptPath: "$(System.DefaultWorkingDirectory)/scripts/compile-bicep-to-arm.ps1"
-          ScriptArguments: "
-            -filePath $(System.DefaultWorkingDirectory)/${{ parameters.infraPath }} `
-            -bicepTemplate main.bicep `
-            -outFile main.json"
-          azurePowerShellVersion: "LatestVersion"
-
       - task: AzureResourceManagerTemplateDeployment@3
         inputs:
           deploymentScope: "Resource Group"
@@ -37,6 +29,7 @@ jobs:
           resourceGroupName: "${{ parameters.rgName }}"
           location: "${{ parameters.location }}"
           templateLocation: "Linked artifact"
-          csmFile: "${{ parameters.infraPath }}/main.json"
+          csmParametersFile: "${{ parameters.parametersPath }}/main.bicepparam"
+          csmFile: "${{ parameters.infraPath }}/main.bicep"
           deploymentMode: "Incremental"
           overrideParameters: "${{parameters.overrideParameters}}"
