change pipeline, add parameters file path

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -28,7 +28,8 @@ stages:
       resource: "Log Analytics"
       serviceConnection: "${{ parameters.serviceConnection }}"
       rgName: "$(rgName)"
-      infraPath: "infra/loganalytics"
+      infraPath: "."
+      parametersPath : "parameters"
       location: "$(location)"
       owner: "$(owner)"
       costCenter: "$(costCenter)"
