--- a/pipelines/templates/stages/stage-deploy-infra.yml
+++ b/pipelines/templates/stages/stage-deploy-infra.yml
@@ -15,6 +15,8 @@ parameters:
     type: string
   - name: infraPath
     type: string
+  - name: parametersPath
+    type: string
   - name: location
     type: string
   - name: owner
@@ -57,6 +59,7 @@ stages:
           jobResources: "${{ parameters.resource }}"
           serviceConnection: "${{ parameters.serviceConnection }}"
           infraPath: "${{ parameters.infraPath }}"
+          parametersPath: "${{ parameters.parametersPath }}"
           rgName: ${{ parameters.rgName }}
           location: ${{ parameters.location }}
           overrideParameters: >-
