--- a/pipelines/templates/stages/stage-deploy-infra.yml
+++ b/pipelines/templates/stages/stage-deploy-infra.yml
@@ -61,7 +61,7 @@ stages:
           owner: "${{ parameters.owner }}"
           costCenter : "${{ parameters.costCenter }}"
           application : "${{ parameters.application }}"
-          descp : "${{ parameters.desc }}"
+          desc : "${{ parameters.desc }}"
           repo:  "${{ parameters.repo }}"
 
       - template: "../jobs/job-deploy-infra.yml@self"
