change in pipeline, adapt parameters in stage for rg provision- correction -02

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -24,8 +24,8 @@ variables:
 stages:
   - template: "./templates/stages/stage-deploy-infra.yml@self"
     parameters:
-      stage: StageProvisionInfrastructureLogAnalytics
-      resource: "Log Analytics"
+      stage: StageProvisionInfrastructure
+      resource: "full infrastructures"
       serviceConnection: "${{ parameters.serviceConnection }}"
       rgName: "$(rgName)"
       infraPath: "."
