change in pipeline, adapt parameters in stage for rg provision- correction -03

--- a/pipelines/templates/stages/stage-deploy-infra.yml
+++ b/pipelines/templates/stages/stage-deploy-infra.yml
@@ -53,7 +53,7 @@ stages:
     jobs:
       - template: "../jobs/job-deploy-rg.yml@self"
         parameters:
-          job: "JobDeployInfrastructure"
+          job: "JobDeployRg"
           jobResources: "${{ parameters.resource }}"
           serviceConnection: "${{ parameters.serviceConnection }}"
           rgName: ${{ parameters.rgName }}
