change in pipeline, adapt parameters in stage for rg provision- correction -04

--- a/pipelines/templates/jobs/job-deploy-infra.yml
+++ b/pipelines/templates/jobs/job-deploy-infra.yml
@@ -20,6 +20,8 @@ parameters:
 jobs:
   - job: "${{ parameters.job }}"
     displayName: "Job: Provision Infrstructure - ${{ parameters.jobResources }}"
+    dependsOn: "JobDeployRg"
+    condition: "succeeded()"
     steps:
 
       - task: AzureResourceManagerTemplateDeployment@3
