edit pipeline - modify path to bicep file in job pipeline for aure deplpoy

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -28,8 +28,8 @@ stages:
       resource: "full infrastructures"
       serviceConnection: "${{ parameters.serviceConnection }}"
       rgName: "$(rgName)"
-      infraPath: "."
-      parametersPath : "parameters"
+      infraPath: "$(System.DefaultWorkingDirectory)"
+      parametersPath : "$(System.DefaultWorkingDirectory)/parameters"
       location: "$(location)"
       owner: "$(owner)"
       costCenter: "$(costCenter)"
