edit pipeline - add checkout correction

--- a/pipelines/templates/jobs/job-deploy-infra.yml
+++ b/pipelines/templates/jobs/job-deploy-infra.yml
@@ -23,7 +23,7 @@ jobs:
     dependsOn: "JobDeployRg"
     condition: "succeeded()"
     steps:
-
+      - checkout: self
       - task: AzureResourceManagerTemplateDeployment@3
         inputs:
           deploymentScope: "Resource Group"
