edit pipeline -  correct typo in file param name and change path in pipeline

--- a/pipelines/templates/jobs/job-deploy-infra.yml
+++ b/pipelines/templates/jobs/job-deploy-infra.yml
@@ -31,7 +31,7 @@ jobs:
           resourceGroupName: "${{ parameters.rgName }}"
           location: "${{ parameters.location }}"
           templateLocation: "Linked artifact"
-          csmParametersFile: "${{ parameters.infraPath }}/parameters.json"
-          csmFile: "${{ parameters.infraPath }}/main.json"
+          csmParametersFile: "./parameters.json"
+          csmFile: "./main.json"
           deploymentMode: "Incremental"
           overrideParameters: "${{parameters.overrideParameters}}"
