--- a/pipelines/templates/jobs/job-deploy-infra.yml
+++ b/pipelines/templates/jobs/job-deploy-infra.yml
@@ -1,8 +1,8 @@
 parameters:
-  # - name: job
-  #   type: string
-  # - name: jobResources
-  #   type: string
+  - name: job
+    type: string
+  - name: resource
+    type: string
   - name: serviceConnection
     type: string
   - name: infraPath
@@ -13,35 +13,40 @@ parameters:
     type: string
   - name: overrideParameters
     type: string
-  - name: resources
+  - name: dependsOn
     type: object
     default: []
 
 
 jobs:
-- ${{ each resource in parameters.resources }} :
-  - job: "${{ resource.job }}"
-    displayName: "Job: Provision Infrstructure - ${{ resource.name }}"
-    steps:
-      - task: AzurePowerShell@5
-        inputs:
-          azureSubscription: "${{ parameters.serviceConnection }}"
-          ScriptType: "FilePath"
-          ScriptPath: "$(System.DefaultWorkingDirectory)/scripts/compile-bicep-to-arm.ps1"
-          ScriptArguments: "
-            -filePath $(System.DefaultWorkingDirectory)/${{ resource.path }}/${{ parameters.infraPath }} `
-            -bicepTemplate main.bicep `
-            -outFile main.json"
-          azurePowerShellVersion: "LatestVersion"
-          
-      - task: AzureResourceManagerTemplateDeployment@3
-        inputs:
-          deploymentScope: "Resource Group"
-          AzureResourceManagerConnection: "${{parameters.serviceConnection}}"
-          action: "Create Or Update Resource Group"
-          resourceGroupName: "${{ parameters.rgName }}"
-          location: "${{ parameters.location }}"
-          templateLocation: "Linked artifact"
-          csmFile: "${{ parameters.infraPath }}/${{ resource.path }}/main.json"
-          deploymentMode: "Incremental"
-          overrideParameters: "${{parameters.overrideParameters}}"
+
+
+    - job: "${{ parameters.job }}"
+      displayName: "Job: Provision Infrstructure - ${{ parameters.resource }}"
+      dependsOn:
+          - ${{ each dep in parameters.dependsOn }} :
+            - ${{ dep }}
+      condition: "succeeded()"
+      steps:
+        - task: AzurePowerShell@5
+          inputs:
+            azureSubscription: "${{ parameters.serviceConnection }}"
+            ScriptType: "FilePath"
+            ScriptPath: "$(System.DefaultWorkingDirectory)/scripts/compile-bicep-to-arm.ps1"
+            ScriptArguments: "
+              -filePath $(System.DefaultWorkingDirectory)/${{ resource.path }}/${{ parameters.infraPath }} `
+              -bicepTemplate main.bicep `
+              -outFile main.json"
+            azurePowerShellVersion: "LatestVersion"
+            
+        - task: AzureResourceManagerTemplateDeployment@3
+          inputs:
+            deploymentScope: "Resource Group"
+            AzureResourceManagerConnection: "${{parameters.serviceConnection}}"
+            action: "Create Or Update Resource Group"
+            resourceGroupName: "${{ parameters.rgName }}"
+            location: "${{ parameters.location }}"
+            templateLocation: "Linked artifact"
+            csmFile: "${{ parameters.infraPath }}/${{ resource.path }}/main.json"
+            deploymentMode: "Incremental"
+            overrideParameters: "${{parameters.overrideParameters}}"
