change of structure - change structure - added module on stage level - correct errors- 02

--- a/pipelines/az-pipelines-provision-infrastructure.yml
+++ b/pipelines/az-pipelines-provision-infrastructure.yml
@@ -54,7 +54,7 @@ stages:
       repo: "$(repo)"
       version: "$(version)"
       partName: "$(partName)"
-      resource: "$(application)"
+      resourceBase: "$(application)"
       resources: 
       - manId: "UserManagedIdentity"
         id: "UserManagedIdentity"
