change of structure - change structure - added module on stage level - correct errors- 04

--- a/pipelines/templates/jobs/job-deploy-infra.yml
+++ b/pipelines/templates/jobs/job-deploy-infra.yml
@@ -19,7 +19,7 @@ parameters:
 
 jobs:
   - job: "${{ parameters.job }}"
-    displayName: "Job: Provision Infrstructure - ${{ parameters.resource }}"
+    displayName: "Job: Provision Infrstructure - ${{ parameters.resourceName }}"
     dependsOn:
       - ${{ each dep in parameters.dependsOn }}:
           - ${{ dep }}
