change of structure - change structure - added module on stage level - correct errors- 06

--- a/pipelines/templates/jobs/job-deploy-infra.yml
+++ b/pipelines/templates/jobs/job-deploy-infra.yml
@@ -44,6 +44,6 @@ jobs:
           resourceGroupName: "${{ parameters.rgName }}"
           location: "${{ parameters.location }}"
           templateLocation: "Linked artifact"
-          csmFile: "${{ parameters.infraPath }}/${{ resource.path }}/main.json"
+          csmFile: "${{ parameters.infraPath }}/main.json"
           deploymentMode: "Incremental"
           overrideParameters: "${{parameters.overrideParameters}}"
