--- a/pipelines/templates/stages/stage-deploy-infra.yml
+++ b/pipelines/templates/stages/stage-deploy-infra.yml
@@ -60,3 +60,4 @@ stages:
                 -version "${{ parameters.version }}"
                 -partName "${{ parameters.partName }}"
                 -location "${{ parameters.location }}"
+                ${{ resource.paramOverride }}
